--- a/SitemaLanche/Views/_ViewImports.cshtml
+++ b/SitemaLanche/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using SitemaLanche
 @using SitemaLanche.Models
+@using SitemaLanche.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
