--- a/SitemaLanche/Views/Lanche/List.cshtml
+++ b/SitemaLanche/Views/Lanche/List.cshtml
@@ -1,12 +1,24 @@
-﻿@model LancheListViewModel
+﻿@model IEnumerable<SitemaLanche.Models.Lanche>
+
+
 <div>
     <h2>Todos os lanches</h2>
 </div>
 
 
-@foreach (var lanche in Model.Lanches)
+@foreach (var lanche in Model)
 {
-  @Html.Partial("_LancheResumo", lanche);
+    <div class="col-sm-4 col-lg-4 col-md-4">
+        <div class="thumbnail">
+            <img src="@lanche.ImagemUrl" class="img-rounded" width="200" height="200"/>
+        </div>
+        <div class="caption">
+            <h3 class="pull-right">Lanche: @lanche.Preco.ToString("c")</h3>
+            <h3>@lanche.Nome</h3>
+            <p>Preço: @lanche.DescricaoCurta</p>
+        </div>
+
+    </div>
 
 }
 
