--- a/SitemaLanche/Views/Shared/_LancheResumo.cshtml
+++ b/SitemaLanche/Views/Shared/_LancheResumo.cshtml
@@ -1,20 +1,21 @@
 ﻿@model Lanche
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
 
-
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            <img src="@Model.ImagemUrl" class="img-rounded" width="200" height="200" />
-        </div>
+<div class="col-sm-4 col-lg-4 col-md-4">
+    <div class="thumbnail">
+        <img src="@Model.ImagemUrl" class="img-rounded" alt="@Model.Nome" width="225" height="225" />
         <div class="caption">
-            <h3 class="pull-right">Lanche: @Model.Preco.ToString("c")</h3>
-            <h3>@Model.Nome</h3>
-            <p>Preço: @Model.DescricaoCurta</p>
+            <h3 class="pull-right">@Model.Preco.ToString("c")</h3>
+            <h3>
+                <a asp-controller="Lanche" asp-action="Details" asp-route-lancheId="@Model.lancheId">@Model.Nome</a>
+            </h3>
+            <p>@Model.DescricaoCurta</p>
         </div>
-
+        <div class="addToCart text-right">
+            <p class="button ">
+                <a class="btn btn-primary" id="cartButton" asp-controller="CarrinhoCompra" asp-action="AdicionarItemNoCarrinhoCompra" asp-route-lancheId="@Model.lancheId">
+                    Incluir no Carrinho
+                </a>
+            </p>
+        </div>
     </div>
-
-
-
+</div>
