adionado icone carrinho e alaterado menu bar

--- a/SitemaLanche/Views/CarringoCompra/Index.cshtml
+++ b/SitemaLanche/Views/CarringoCompra/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model CarrinhoCompraViewModel
+@model SitemaLanche.ViewModels.CarrinhoCompraViewModel
 
 <div class="row checkoutForm">
     <h2>Seu carrinho de compras</h2>
