--- a/SitemaLanche/Views/Shared/_Layout.cshtml
+++ b/SitemaLanche/Views/Shared/_Layout.cshtml
@@ -28,12 +28,19 @@
                 </button>
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SitemaLanche</a>
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                    @*@await Component.InvokeAsync("CategoriaMenu")*@
+                    <li><a asp-controller="Contato" asp-action="Index">Contato</a></li>
+                    @await Component.InvokeAsync("CarrinhoCompraResumo")
                 </ul>
+               @*@await Html.PartialAsync("_LoginPartial");*@
+                <form class="navbar-form navbar-right" asp-controller="Lanche" asp-action="Search" method="get">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Procurar lanche" name="searchString" value="@ViewData["searchString"]">
+                    </div>
+                </form>
             </div>
         </div>
     </nav>
