--- a/SitemaLanche/Views/_ViewImports.cshtml
+++ b/SitemaLanche/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using SitemaLanche
 @using SitemaLanche.Models
+@using SitemaLanche.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper SistemaLanche.TagHelpers.* , SistemaLanche
