--- a/SitemaLanche/Views/Shared/_LancheResumo.cshtml
+++ b/SitemaLanche/Views/Shared/_LancheResumo.cshtml
@@ -12,7 +12,7 @@
         </div>
         <div class="addToCart text-right">
             <p class="button ">
-                <a class="btn btn-primary" id="cartButton" asp-controller="CarrinhoCompra" asp-action="AdicionarItemNoCarrinhoCompra" asp-route-lancheId="@Model.lancheId">
+                <a class="btn btn-primary" id="cartButton" asp-controller="CarrinhoCompra" asp-action="AdicionarItenNoCarrinho" asp-route-lancheId="@Model.lancheId">
                     Incluir no Carrinho
                 </a>
             </p>
