--- a/SitemaLanche/Views/Shared/_Layout.cshtml
+++ b/SitemaLanche/Views/Shared/_Layout.cshtml
@@ -31,11 +31,11 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                    @*@await Component.InvokeAsync("CategoriaMenu")*@
+                    @await Component.InvokeAsync("CategoriaMenu")
                     <li><a asp-controller="Contato" asp-action="Index">Contato</a></li>
                     @await Component.InvokeAsync("CarrinhoCompraResumo")
                 </ul>
-               @*@await Html.PartialAsync("_LoginPartial");*@
+               @await Html.PartialAsync("_LoginPartial");
                 <form class="navbar-form navbar-right" asp-controller="Lanche" asp-action="Search" method="get">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Procurar lanche" name="searchString" value="@ViewData["searchString"]">
