--- a/SitemaLanche/Views/_ViewImports.cshtml
+++ b/SitemaLanche/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using SitemaLanche.Models
 @using SitemaLanche.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper SistemaLanche.TagHelpers.* , SistemaLanche
+@addTagHelper SitemaLanche.TagHelpers.* , SitemaLanche
